force-app/main/default/objects/LineRecipient__c/LineRecipient__c.object-meta.xml
<CustomObject>
    <label>Line Recipient</label>
    <nameField>
        <displayFormat>LR-{000000}</displayFormat>
        <label>Line Recipient Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>