force-app/main/default/objects/LineRecipient__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>AccountManager__r.FirstName &amp;  AccountManager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>