force-app/main/default/objects/LineRecipient__c/fields/AM_ID__c.field-meta.xml
<CustomField>
    <fullName>AM_ID__c</fullName>
    <formula>CASESAFEID( AccountManager__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM ID</label>
    <type>Text</type>
</CustomField>