force-app/main/default/objects/LineRecipient__c/fields/AM_Market_Goal__c.field-meta.xml
<CustomField>
    <fullName>AM_Market_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Market Goal</label>
    <referenceTo>Market_Goal__c</referenceTo>
    <relationshipLabel>Line Recipients</relationshipLabel>
    <relationshipName>Line_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>