force-app/main/default/objects/LineRecipient__c/fields/Contact_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_SF_ID__c</fullName>
    <formula>Recipient__r.Full_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact SF ID</label>
    <type>Text</type>
</CustomField>