force-app/main/default/objects/LineRecipient__c/fields/DSR_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>DSR_Product_Category__c</fullName>
    <formula>TEXT(OrderProductLine__r.kugo2p__Product__r.kugo2p__ReferenceProduct__r.DSR_Product_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSR Product Category</label>
    <type>Text</type>
</CustomField>