force-app/main/default/objects/LineRecipient__c/fields/Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>Line Recipients</relationshipLabel>
    <relationshipName>Line_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>