force-app/main/default/objects/LineRecipient__c/fields/Fulfillment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Owner__c</fullName>
    <formula>Fulfillment__r.Fulfillment_Owner__r.FirstName + &quot; &quot; +  Fulfillment__r.Fulfillment_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Owner</label>
    <type>Text</type>
</CustomField>