force-app/main/default/objects/LineRecipient__c/fields/Graphics_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Assigned__c</fullName>
    <formula>Fulfillment__r.Graphics_Assigned__r.FirstName + &quot; &quot; + Fulfillment__r.Graphics_Assigned__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Graphics Assigned</label>
    <type>Text</type>
</CustomField>