force-app/main/default/objects/LineRecipient__c/fields/Line_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Effective_Date__c</fullName>
    <formula>OrderProductLine__r.Line_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Effective Date</label>
    <type>DateTime</type>
</CustomField>