force-app/main/default/objects/LineRecipient__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Line Recipients</relationshipLabel>
    <relationshipName>Line_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>