force-app/main/default/objects/LineRecipient__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order Number</label>
    <referenceTo>kugo2p__SalesOrder__c</referenceTo>
    <relationshipLabel>Line Recipients</relationshipLabel>
    <relationshipName>Order_Line_Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>