force-app/main/default/objects/LineRecipient__c/fields/OrderServiceLine__c.field-meta.xml
<CustomField>
    <fullName>OrderServiceLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Service Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>kugo2p__SalesOrderServiceLine__c.kugo2p__SalesOrder__c</field>
            <operation>equals</operation>
            <valueField>$Source.Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>kugo2p__SalesOrderServiceLine__c</referenceTo>
    <relationshipName>Order_Line_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>