force-app/main/default/objects/LineRecipient__c/fields/product_created_by_flow__c.field-meta.xml
<CustomField>
    <fullName>product_created_by_flow__c</fullName>
    <formula>OrderProductLine__r.created_by_flow__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>product created by flow</label>
    <type>Checkbox</type>
</CustomField>