force-app/main/default/objects/LineRecipient__c/fields/Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_ID__c</fullName>
    <formula>Recipient__r.Current_Public_Entry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>