force-app/main/default/objects/LineRecipient__c/fields/Release_Status__c.field-meta.xml
<CustomField>
    <fullName>Release_Status__c</fullName>
    <formula>Order__r.kugo2p__RecordStatus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Status</label>
    <type>Text</type>
</CustomField>