force-app/main/default/objects/LineRecipient__c/validationRules/ProductServiceLineCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductServiceLineCheck</fullName>
    <active>true</active>
    <errorConditionFormula>OR (

AND (ISBLANK(OrderProductLine__c), ISBLANK(OrderServiceLine__c))
,

AND (NOT(ISBLANK(OrderProductLine__c)), NOT(ISBLANK(OrderServiceLine__c)))

)</errorConditionFormula>
    <errorMessage>Choose Either Order Product Line or Order Service Line to Assign the Recipient.</errorMessage>
</ValidationRule>