force-app/main/default/objects/LineRecipient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AccountManager__c</columns>
    <columns>Fulfillment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>